gap at bottom of product page fixed

--- a/app/assets/stylesheets/components/_search_form.scss
+++ b/app/assets/stylesheets/components/_search_form.scss
@@ -21,7 +21,7 @@
     height: 40px;
   }
   i {
-    font-size: 22px;
+    font-size: 23px;
   }
 }
 
